Finished rigibody kinematics

--- a/src/components/CalloutContainer.astro
+++ b/src/components/CalloutContainer.astro
@@ -9,7 +9,7 @@
     .sticky{
         align-self: start;
         position: sticky;
-        top: 1rem;
+        top: calc(53px + 1rem);
     }
 
     @media (min-width: 992px){
