--- a/src/pages/dyn/rigid_body_kinetics.astro
+++ b/src/pages/dyn/rigid_body_kinetics.astro
@@ -1325,6 +1325,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     <Image src="/Dynamics/RigidBodyKineticsFigs/ICexamples1.png" width="5"></Image>
 
     <Image src="/Dynamics/RigidBodyKineticsFigs/ICexamples2.png" width="5"></Image>
+</SubSection>
 
 <SubSubSection title=" Graphical rules for finding M" id="graphical_rules_ic">
 
@@ -1354,8 +1355,6 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </Warning>
 
 </SubSubSection>
-
-</SubSection>
 
 <SubSection title="Applications"  id="app_rg_kinetics" ></SubSection>
 
@@ -1399,9 +1398,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         car to decelerate to a stop.
         </p>
         <p>
-            <Center>
-                <PrairieDrawCanvas id="ava-fr-c" width="400" height="400" show_border="False" />
-            </Center>
+            <PrairieDrawCanvas id="ava-fr-c" width="400" height="400" show_border="False" />
         </p>
         <p>
         <button class="seq-step:ava-fr-c:motion:stationary" onclick="ava_fr_c.stepSequence('motion', 'stationary');">accelerate</button>
@@ -1831,7 +1828,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
             43&#xb0; bank angle on the corners and 15&#xb0; banking on
             the straightaways.
           </p>
-        <Image alt="Bicycle riders in a velodrome" src="avb_3886159972_71e0dc52d8_o_600.jpg">
+        <Image alt="Bicycle riders in a velodrome" src="/Dynamics/RigidBodyKineticsFigs/avb_3886159972_71e0dc52d8_o_600.jpg">
             <p class="figureCaption">
               Bicycle riders on a banked turn at the <a
               target="_blank" rel="noopener noreferrer" href="http://velodrome.nscsports.org/">Blaine
@@ -1897,12 +1894,12 @@ import DisplayTable from "../../components/DisplayTable.astro"
               bikes</a> with fixed chains (no freewheeling, no gears)
               and <em>no brakes</em>. The corners are scarily steep:
             </p>
-              <Image src="avb_velodrome_track_small.jpg"> 
+              <Image src="/Dynamics/RigidBodyKineticsFigs/avb_velodrome_track_small.jpg"> 
               <!-- alt="woman leaning against a velodrome track">< -->
               <p class="caption">
                 Image credit: <a
                 target="_blank" rel="noopener noreferrer" href="http://cycletc.com/2011/06/30/track-cycling-we-have-a-what-nsc-velodrome-in-blaine-mn-by-nicole/">Tom
-                McGoldrick</a> (<a href="avb_velodrome_track.jpg">full
+                McGoldrick</a> (<a href="/Dynamics/RigidBodyKineticsFigs/avb_velodrome_track.jpg">full
                 sized image</a>).
 
               </p>
